<resources>
    <string name="app_name" translatable="false">Advanced Settings</string>
    <string name="welcome">Welcome</string>
    <string name="text">Check your watch for app. If it\'s not there yet, then just wait a bit for synchronisation to finish. Thanks :)</string>
    <string name="donate">DONATE</string>
    <string name="rate">RATE</string>
    <string name="usd_donation">Donate $3</string>
    <string name="usd_donation7">Donate $7</string>
    <string name="usd_donation16">Donate $16</string>
    <string name="usd_donation32">Donate $32</string>
    <string name="btc_donation">Donate Bitcoins</string>
    <string name="hide">Hide phone side icon</string>
    <string name="no_app">Looks like you don\'t have Android Wear app installed! This app will not install on your Android Wear watch unless you install Android Wear app and connect it with your watch! Keep in mind that this app is NOT for phones or tablets, it is for watch!</string>
</resources>
